syntax = "proto3";

package chef.automate.api.event_feed.request;
option go_package = "github.com/chef/automate/components/automate-gateway/api/event_feed/request";

message EventFilter {
  // Filters to be applied to the request.
  repeated string filter = 1;
  // Earliest events to return.
  int64 start = 2;
  // Latest events to return.
  int64 end = 3;
  // Count of events to return per page.
  int32 page_size = 4;
  // Used for pagination, to request results in ascending order.
  int64 after = 5;
  // Used for pagination, to request results in descending order.
  int64 before = 6;
  // Used for pagination, to bookmark next set of results.
  string cursor = 7;
  // Used to group similar events together.
  bool collapse = 8;
}

message EventCountsFilter {
  // Filters to be applied to the request.
  repeated string filter = 1;
  // Earliest events to return.
  int64 start = 2;
  // Latest events to return.
  int64 end = 3;
}
